// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Figure with a caption containing a link should render correctly 1`] = `
.c0 {
  margin: 0;
  padding-bottom: 1rem;
  width: 100%;
}

.c2 {
  display: block;
  width: 100%;
}

.c4 {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  padding: 0;
  border: 0;
  overflow: hidden;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  top: 0;
}

.c3 {
  font-size: 0.9375em;
  line-height: 1.125rem;
  background-color: #D5D0CD;
  color: #404040;
  font-family: ReithSansNewsRegular,Helvetica,Arial,sans-serif;
  padding: 0.5rem;
  width: 100%;
}

.c5 {
  color: #0F556C;
  padding: 2px;
  border-bottom: 1px solid #0F556C;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c5:visited {
  color: #5C5752;
  border-bottom: 1px solid #5C5752;
}

.c5:focus {
  background-color: #0F556C;
  border-bottom: 1px solid #F5F3F1;
  color: #F5F3F1;
}

.c5:hover {
  color: #0F556C;
  background-color: #C3DEE7;
  border-bottom: 1px solid #0F556C;
}

.c1 {
  position: relative;
}

@media (min-width:37.5em) {
  .c3 {
    font-size: 0.875em;
  }
}

@media (min-width:37.5em) {
  .c3 {
    padding: 0.5rem 1rem;
  }
}

<figure
  className="c0"
>
  <div
    className="c1"
  >
    <img
      alt="Pauline Clayton"
      className="c2"
      src="https://ichef.bbci.co.uk/news/640/cpsprodpb/439A/production/_101655395_paulineclayton.jpg"
    />
  </div>
  <figcaption
    className="c3"
  >
    <span
      className="c4"
    >
      Image caption, 
    </span>
    This is a caption 
    <a
      className="c5"
      href="https://bbc.com/news"
    >
      with a link
    </a>
  </figcaption>
</figure>
`;

exports[`Figure with a caption should render correctly 1`] = `
.c0 {
  margin: 0;
  padding-bottom: 1rem;
  width: 100%;
}

.c2 {
  display: block;
  width: 100%;
}

.c4 {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  padding: 0;
  border: 0;
  overflow: hidden;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  top: 0;
}

.c3 {
  font-size: 0.9375em;
  line-height: 1.125rem;
  background-color: #D5D0CD;
  color: #404040;
  font-family: ReithSansNewsRegular,Helvetica,Arial,sans-serif;
  padding: 0.5rem;
  width: 100%;
}

.c1 {
  position: relative;
}

@media (min-width:37.5em) {
  .c3 {
    font-size: 0.875em;
  }
}

@media (min-width:37.5em) {
  .c3 {
    padding: 0.5rem 1rem;
  }
}

<figure
  className="c0"
>
  <div
    className="c1"
  >
    <img
      alt="Pauline Clayton"
      className="c2"
      src="https://ichef.bbci.co.uk/news/640/cpsprodpb/439A/production/_101655395_paulineclayton.jpg"
    />
  </div>
  <figcaption
    className="c3"
  >
    <span
      className="c4"
    >
      Image caption, 
    </span>
    This is a caption
  </figcaption>
</figure>
`;

exports[`Figure with caption and non-BBC copyright should render correctly 1`] = `
.c0 {
  margin: 0;
  padding-bottom: 1rem;
  width: 100%;
}

.c2 {
  display: block;
  width: 100%;
}

.c3 {
  font-size: 0.75em;
  line-height: 1em;
  background-color: #222222;
  color: #FFFFFF;
  padding: 0.5rem;
  font-family: ReithSansNewsRegular,Helvetica,Arial,sans-serif;
  position: absolute;
  bottom: 0;
  right: 0;
}

.c3::after {
  content: '.';
  color: #222222;
}

.c5 {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  padding: 0;
  border: 0;
  overflow: hidden;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  top: 0;
}

.c4 {
  font-size: 0.9375em;
  line-height: 1.125rem;
  background-color: #D5D0CD;
  color: #404040;
  font-family: ReithSansNewsRegular,Helvetica,Arial,sans-serif;
  padding: 0.5rem;
  width: 100%;
}

.c1 {
  position: relative;
}

@media (min-width:37.5em) {
  .c4 {
    font-size: 0.875em;
  }
}

@media (min-width:37.5em) {
  .c4 {
    padding: 0.5rem 1rem;
  }
}

<figure
  className="c0"
>
  <div
    className="c1"
  >
    <img
      alt="Pauline Clayton"
      className="c2"
      src="https://ichef.bbci.co.uk/news/640/cpsprodpb/439A/production/_101655395_paulineclayton.jpg"
    />
    <span
      className="c3"
      role="text"
    >
      © Getty Images
    </span>
  </div>
  <figcaption
    className="c4"
  >
    <span
      className="c5"
    >
      Image caption, 
    </span>
    This is a caption
  </figcaption>
</figure>
`;

exports[`Figure with non-BBC copyright should render correctly 1`] = `
.c0 {
  margin: 0;
  padding-bottom: 1rem;
  width: 100%;
}

.c2 {
  display: block;
  width: 100%;
}

.c3 {
  font-size: 0.75em;
  line-height: 1em;
  background-color: #222222;
  color: #FFFFFF;
  padding: 0.5rem;
  font-family: ReithSansNewsRegular,Helvetica,Arial,sans-serif;
  position: absolute;
  bottom: 0;
  right: 0;
}

.c3::after {
  content: '.';
  color: #222222;
}

.c1 {
  position: relative;
}

<figure
  className="c0"
>
  <div
    className="c1"
  >
    <img
      alt="Pauline Clayton"
      className="c2"
      src="https://ichef.bbci.co.uk/news/640/cpsprodpb/439A/production/_101655395_paulineclayton.jpg"
    />
    <span
      className="c3"
      role="text"
    >
      © Getty Images
    </span>
  </div>
</figure>
`;

exports[`Figure without a caption should render correctly 1`] = `
.c0 {
  margin: 0;
  padding-bottom: 1rem;
  width: 100%;
}

.c2 {
  display: block;
  width: 100%;
}

.c1 {
  position: relative;
}

<figure
  className="c0"
>
  <div
    className="c1"
  >
    <img
      alt="Pauline Clayton"
      className="c2"
      src="https://ichef.bbci.co.uk/news/640/cpsprodpb/439A/production/_101655395_paulineclayton.jpg"
    />
  </div>
</figure>
`;
